--- a/prototype-mode/pom.xml
+++ b/prototype-mode/pom.xml
@@ -7,6 +7,7 @@
         <groupId>com.tangkc</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+    <modelVersion>4.0.0</modelVersion>
     <description>原型模式</description>
 
     <modules>
